--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -11,7 +11,7 @@ edition = "2021"
 tauri-build = { version = "1", features = [] }
 
 [dependencies]
-tauri = { version = "1", features = [ "window-unmaximize", "window-start-dragging", "window-maximize", "window-hide", "window-show", "window-minimize", "window-unminimize", "window-close", "shell-open"] }
+tauri = { version = "1", features = [ "path-all", "fs-all", "window-unmaximize", "window-start-dragging", "window-maximize", "window-hide", "window-show", "window-minimize", "window-unminimize", "window-close", "shell-open"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 
